--- a/_config.yml
+++ b/_config.yml
@@ -17,6 +17,7 @@ minimal: false             # use a dark header
 # Menu
 
 navigation:                # accepts {file, title, url, icon, sidebaricon}
+  - {file: "m-doc.md"}
   - {file: "py-doc.md"}
 
 external:                  # shows a footer with social links - for available icons see fontawesome.com/icons
