--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: "Saving Files"
 author: "Duncan Tulimieri"
-description: "Duncan Tulimieri"
+description: "[Duncan Tulimieri(https://tulimid1.github.io)"
 
 permalink: /:title/
 lang: "en"
