--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: "Saving Figures and Gifs"
+title: "Saving Figures and Creating Gifs"
 author: "Duncan Tulimieri"
 description: "Duncan Tulimieri"
 
